--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col s6" id="loginLeftDiv">
-
+    <form ng-submit="login()">
         <div id="userNameDiv">
             <div class="input-field col s8">
                 <span class="fa fa-user-o prefix"></span>
@@ -23,10 +23,10 @@
   	     </div>
         <div id="signInButtonDiv">
           <div class="col s3" >
-            <button type="button" class="btn waves-effect waves-light" id="signInButton" ng-click="login()">SIGN IN</button>
+            <button type="submit" class="btn waves-effect waves-light" id="signInButton" >SIGN IN</button>
             </div>
         </div>
-        
+        </form>
         
     </div>
     <div class="col s1">
