--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -225,6 +225,22 @@ However, delay the fade out process for 2.5 seconds */
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+#snackbar.ldg {
+    visibility: visible; /* Show the snackbar */
+    background-color: #ffffff;
+    color : black;
+/* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
+However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s;
+    animation: fadein 0.5s;
+}
+
+#snackbar.ldgHide {
+/* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
+However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadeout 0.5s;
+    animation: fadeout 0.5s;
+}
 
 
 /* Animations to fade the snackbar in and out */
