UPDATE & DELETE CUSTOMERS COMPLETED

--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -26,7 +26,7 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <i class="material-icons" id="arrow">keyboard_arrow_down</i></a></li>
 
-  <li><a ui-sref="" class="dropdown-button" data-activates='billDropDown'><i class="material-icons">attach_money</i>BILLING  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <li><a ui-sref="" class="dropdown-button" data-activates='billDropDown'> <i class="fa fa-inr" style="position: relative; left:5px; font-size:20px"></i>BILLING  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <i class="material-icons" id="arrow">keyboard_arrow_down</i></a></li>
 
   <li><a ui-sref="" class="dropdown-button" data-activates='orderDropDown'><i class="material-icons">receipt</i>ORDERS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -35,16 +35,12 @@
 
   <ul id='custDropDown' class='dropdown-content'>
     <li><a ui-sref="new_customer"><i class="material-icons">person_add</i>New Customer</a></li>
-    <li><a ui-sref="view_customer"><i class="material-icons">remove_red_eye</i>View Customers</a></li>
-    <li><a ui-sref="search_customer"><i class="material-icons">search</i>Search Customer</a></li>
-    <li><a ui-sref="update_customer"><i class="material-icons">update</i>Update Customer</a></li>
+    <li><a ui-sref="view_customer"><i class="fa fa-users"></i>Customers Central</a></li>
   </ul>
 
   <ul id='stockDropDown' class='dropdown-content'>
     <li><a ui-sref="new_item"><i class="material-icons">add</i>New Item</a></li>
-    <li><a ui-sref="view_stock"><i class="material-icons">remove_red_eye</i>View Stocks</a></li>
-    <li><a ui-sref="search_stock"><i class="material-icons">search</i>Search Stocks</a></li>
-    <li><a ui-sref="update_stock"><i class="material-icons">update</i>Update Stocks</a></li>
+    <li><a ui-sref="view_stock"><i class="fa fa-cubes"></i>Stocks Central</a></li>
   </ul>  
 
   <ul id='billDropDown' class='dropdown-content'>
