--- a/public/views/customers/view.html
+++ b/public/views/customers/view.html
@@ -12,14 +12,14 @@
 		text-decoration: none;
 		cursor: pointer;
 	}
-	#update{
+	.update{
 		font-size: 15px;
 		width: 170px;
 		height: 45px;
 		position: absolute; 
 		left: 550px;
 	}
-	#delete{
+	.delete{
 		font-size: 15px;
 		background-color: #d32f2f ;
 		width: 170px;
@@ -29,7 +29,7 @@
 	}	
 </style>
 <div class="animated">
-<h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">VIEW CUSTOMER DETAILS </h2>
+<h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">CUSTOMER CENTRAL </h2>
 <h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL CUSTOMERS REGISTERED : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
   <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
@@ -38,38 +38,53 @@
 	<table ng-table="custTable" class="table table-hover table-responsive list">
   <thead>
     <tr style="cursor: default;">
-      <th width ="35%"><i class="material-icons">perm_identity</i>NAME</th>
-      <th width ="40%"><i class="material-icons">phone</i>CONTACT NUMBER</th>
-      <th width ="25%"><center><i class="material-icons">attach_money</i>CREDIT</center></th>
+      <th width ="35%"><i class="fa fa-user-o" style="font-size: 15px"></i> NAME</th>
+      <th width ="25%"><i class="fa fa-phone" style="font-size: 15px"></i> CONTACT NUMBER</th>
+      <th width ="20%"><center><i class="fa fa-cube" style="font-size: 15px"></i> OUTSTANDING ORDERS</center></th>
+      <th width ="20%"><center><i class="fa fa-inr" style="font-size: 15px"></i> CREDIT</center></th>
     </tr>
   </thead>
-    <tr ng-repeat="customer in $data | filter : search" ng-click="getInfo($index)" id="row{{$index}}">
-    <td height="48" width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
-    <td height="48" width="40%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
-    <td height="48" width="25%" title = "Credit"> <center>{{customer.credit}}</center> </td>
+    <tr ng-repeat="customer in $data | filter : search" ng-click="set(customer)" id="row{{$index}}" height="48">
+    <td width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
+    <td width="25%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
+    <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
+    <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
   	</tr>         
 </table>
 </div>
 
 <div id="buttonSet">
 <center>
-<button id="update" class="waves-effect waves-light btn-large"><span style="position: relative; bottom:5px"><i class="material-icons">update</i> UPDATE </span></button>
-<button id="delete" class="waves-effect waves-light btn-large"><span style="position: relative; bottom:5px"><i class="material-icons">delete_forever</i> DELETE </span></button>
+<button id="" class="waves-effect waves-light btn-large update" ng-click="update()"><span style="position: relative; bottom:5px"><i class="material-icons">update</i> UPDATE </span></button>
+<button id="" class="waves-effect waves-light btn-large delete" ng-click="delete()" style="background-color: #d32f2f ;"><span style="position: relative; bottom:5px"><i class="material-icons">delete_forever</i> DELETE </span></button>
 </center>
 </div>
 
+<div id="delConfirm" class="modal bottom-sheet">
+	<div class="modal-content">
+		<center><h4>ARE YOU SURE YOU WANT TO DELETE <b>{{customer.name}}</b> ?</h4></center>
+		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="delete()"> YES </button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="noDel()"> NO </button></center>
+	</div>
+</div>
+
+<div id="snackbar">{{errorMsg}}</div>
+
 <script type="text/javascript">
 	$(document).ready(function(){
+	$('.modal').modal({
+	}) ;
 
-		$('#buttonSet').hide(); 
+	$('#buttonSet').hide(); 
 
     $('.table').click(function(event){
 			var $target = $(event.target);
 			var ele = $target.closest("tr").attr("id");
+			var idNew = $target.closest("td").attr("id")
 			if ( ele != undefined ){
 				var posTop = $target.closest("tr").position().top ;
 				$('#buttonSet').fadeOut()
-				console.log(posTop)
 				if ( $('#'+ele).hasClass('tableRow') ){
 					$('.tableRow').animate({'height':48})
 					$('tr').removeClass('tableRow')
@@ -80,8 +95,10 @@
 					$('tr').removeClass('tableRow')
 					$('#'+ele).addClass('tableRow')
 					$('#buttonSet').fadeIn()
-					$('#update').css('top' , posTop+40 )
-					$('#delete').css('top' , posTop+40 )
+					$('.update').css('top' , posTop+40 )
+					$('.delete').css('top' , posTop+40 )
+					$('.update').attr('id',idNew)
+					$('.delete').attr('id',idNew)
 				}
 			}else{
 					$('#buttonSet').fadeOut()
