--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -29,7 +29,7 @@
 	}	
 </style>
 <div class="animated">
-<h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">VIEW STOCK DETAILS </h2>
+<h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">STOCK CENTRAL </h2>
 <h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL ITEMS IN DATABSE : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
   <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
@@ -39,7 +39,7 @@
   <thead>
     <tr style="cursor: default;">
       <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
-      <th width ="30%"><i class="fa fa-chevron-right" style="font-size: 12px"></i> NAME</th>
+      <th width ="30%"><i class="fa fa-user-o" style="font-size: 15px"></i> NAME</th>
       <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
       <th width ="12.50%"><center><i class="fa fa-stack-overflow" style="font-size: 20px"></i> TOTAL STOCK</center></th>
       <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> RENTED</center></th>
