--- a/public/views/customers/view.html
+++ b/public/views/customers/view.html
@@ -44,7 +44,7 @@
       <th width ="20%"><center><i class="fa fa-inr" style="font-size: 15px"></i> CREDIT</center></th>
     </tr>
   </thead>
-    <tr ng-repeat="customer in $data | filter : search" ng-click="set(customer)" id="row{{$index}}" height="48">
+    <tr ng-repeat="customer in $data | filter : search" ng-click="set(customer,$index)" id="row{{$index}}" height="48">
     <td width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
     <td width="25%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
     <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
@@ -56,7 +56,7 @@
 <div id="buttonSet">
 <center>
 <button id="" class="waves-effect waves-light btn-large update" ng-click="update()"><span style="position: relative; bottom:5px"><i class="material-icons">update</i> UPDATE </span></button>
-<button id="" class="waves-effect waves-light btn-large delete" ng-click="delete()" style="background-color: #d32f2f ;"><span style="position: relative; bottom:5px"><i class="material-icons">delete_forever</i> DELETE </span></button>
+<button id="" class="waves-effect waves-light btn-large delete" ng-click="delConfirm()" style="background-color: #d32f2f ;"><span style="position: relative; bottom:5px"><i class="material-icons">delete_forever</i> DELETE </span></button>
 </center>
 </div>
 
