--- a/public/views/customers/view.html
+++ b/public/views/customers/view.html
@@ -48,7 +48,7 @@
     <td width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
     <td width="25%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
     <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
-    <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
+    <td width="20%" title = "Credit"> <center>{{customer.orders}}</center> </td>
   	</tr>         
 </table>
 </div>
@@ -62,7 +62,7 @@
 
 <div id="delConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
-		<center><h4>ARE YOU SURE YOU WANT TO DELETE <b>{{customer.name}}</b> ?</h4></center>
+		<center><h4>ARE YOU SURE TO DELETE <b>{{customer.name}}</b> ?</h4></center>
 		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="delete()"> YES </button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="noDel()"> NO </button></center>
