--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -6,12 +6,29 @@
 		font-family: 'Montserrat',sans-serif;
 		cursor: default;
 	}
+	table th:hover{
+		cursor: default;
+	}
 	.list tr:hover{
 		text-decoration: none;
 		cursor: pointer;
 	}
 	#searchIcon:hover{
 		cursor: pointer;
+	}
+
+	.bs1{
+		position: relative; 
+		bottom:20px; 
+		right:48px; 
+		float: right; 
+		width:180px; 
+	}
+	.bs2{
+		position: relative; 
+		bottom:20px; 
+		left:635px; 
+		width:180px; 
 	}
 </style>
 
@@ -52,13 +69,15 @@
 	
 	<div class="card blue-grey darken-1">
 		<div class="card-content white-text">
-			<span class="card-title">CUSTOMER DETAILS</span>
-				<span style="position: fixed; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 22%"><i class="fa fa-user-o" style="font-size: 15px"></i> {{customer.name}}</span>
-				<span style="position: fixed; right:700px;"><i class="fa fa-phone" style="font-size: 15px"></i> {{customer.contact}}</span>
-				<span style="position: fixed; right:550px;"><i class="fa fa-cube" style="font-size: 15px"></i> {{customer.credit}}</span>
-				<span style="position: fixed; right:450px;"><i class="fa fa-inr" style="font-size: 15px"></i> {{customer.orders}}</span>
-				<span style="position: fixed; right:270px;" ng-show="formattedDate!=''"><i class="fa fa-calendar" style="font-size: 15px"></i> {{formattedDate}}</span>				
-				<span style="position: relative; left:900px;" ng-show="eveLoxn!=''"><i class="fa fa-map-marker" style="font-size: 15px"></i> {{eveLoxn}}</span>						
+			<span class="card-title">ORDER DETAILS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-code"></i>&nbsp;&nbsp;{{orderId}} </span>
+				<span style="position: absolute; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 22%"><i class="fa fa-user-o" style="font-size: 15px"></i> {{customer.name}}</span>
+				<span style="position: absolute; right:700px;"><i class="fa fa-phone" style="font-size: 15px"></i> {{customer.contact}}</span>
+				<span style="position: absolute; right:550px;"><i class="fa fa-cube" style="font-size: 15px"></i> {{customer.credit}}</span>
+				<span style="position: absolute; right:450px;"><i class="fa fa-inr" style="font-size: 15px"></i> {{customer.orders}}</span>
+				<span style="position: absolute; top:35px; right:270px;" ng-show="showDetails"><i class="fa fa-truck" style="font-size: 15px"></i> {{formattedPickupDate}}</span>	
+				<span style="position: absolute; right:270px;" ng-show="showDetails"><i class="fa fa-calendar" style="font-size: 15px"></i> {{formattedReturnDate}}</span>	
+				<span style="position: absolute; top:35px; right:211px" ng-show="showDetails && evePurpose != ''"><i class="fa fa-connectdevelop" style="font-size: 15px"></i> {{evePurpose}}</span>
+				<span style="position: relative; left:825px;" ng-show="showDetails && eveLoxn != ''"><i class="fa fa-map-marker" style="font-size: 15px"></i> {{eveLoxn}}</span>						
 				<br>
 		</div>
 	</div>
@@ -70,17 +89,21 @@
 			<i class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp; ORDER PLACED ON <input type="date" class="datepicker" pick-a-date="todayDate" id="todayDate" name="todayDate" style="width: 250px" disabled>
 		</div>
 		<div class="input-field">
+			<i class="fa fa-truck"></i>&nbsp;&nbsp;&nbsp; PICKUP ON &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" class="datepicker" pick-a-date="pickupDate" id="pickupDate" name="pickupDate" style="width: 250px" required>
+		</div>		
+		<div class="input-field">
 			<i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp; RETURN ON &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" class="datepicker" pick-a-date="returnDate" id="returnDate" name="returnDate" style="width: 250px" required>
 		</div>
 		<div class="input-field">
-    		<i class="fa fa-connectdevelop"></i>&nbsp;&nbsp; EVENT PURPOSE &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" ng-model="evePurpose" ng-keyup="toUpper('evePurpose')" ng-init="" id="evePurpose" style="width: 250px">
+    		<i class="fa fa-connectdevelop"></i>&nbsp;&nbsp; EVENT PURPOSE &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" ng-model="evePurpose" ng-keyup="toUpper('evePurpose')" ng-init="" id="evePurpose" style="width: 250px; font-size: 19px">
 		</div>
 		<div class="input-field">
-    		<i class="fa fa-map-marker"></i>&nbsp;&nbsp;&nbsp;&nbsp; EVENT LOCATION&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" maxlength="14" ng-model="eveLoxn" ng-keyup="toUpper('eveLoxn')" ng-init="" id="evePurpose" style="width: 250px">
+    		<i class="fa fa-map-marker"></i>&nbsp;&nbsp;&nbsp;&nbsp; EVENT LOCATION&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" maxlength="22" ng-model="eveLoxn" ng-keyup="toUpper('eveLoxn')" ng-init="" id="evePurpose" style="width: 250px; font-size: 19px">
 		</div>			
 	</div>
-	<span style="position: relative; bottom: 30px; margin-left: 710px;">
-		<button class="waves-effect waves-light btn-large" id="backBtn" ng-model="backBtn" ng-click="back()" ><font size="4" ><i class="fa fa-chevron-left"></i> BACK</font></button>
+	<!-- <span style="position: relative; bottom:60px ; margin-left: 710px;"> -->
+	<span style="position: absolute; bottom:15px ; float: right; right:48px">
+		<button class="waves-effect waves-light btn-large" id="backBtn" ng-model="backBtn" ng-click="back(1)" ><font size="4" ><i class="fa fa-chevron-left"></i> BACK</font></button>
 		<button class="waves-effect waves-light btn-large" type="submit" id="proceedBtn" ng-model="proceedBtn" ng-click="proceed()" ><font size="4" > PROCEED <i class="fa fa-chevron-right"></i> </font></button>
 	</span>
 	</form>
@@ -113,17 +136,18 @@
     <tr ng-repeat="orderedItem in orderedList" class="animated fadeInLeft" height="48" id="item{{$index}}">
     <td width="20%" title = "CODE"> {{orderedItem.barCode}} </td>
     <td width="30%" title = "NAME" style="position:relative; left:10px">  {{orderedItem.name}} </td>
-    <td width="12.50%" title = "PRICE"> <center>{{orderedItem.price}}</center> </td>
+    <td width="12.50%" title = "PRICE"> <center>{{orderedItem.price | currency:""}} ₹</center> </td>
     <td width="12.50%" title = "TOTAL STOCK"> <center>{{orderedItem.qty}}</center> </td>
-    <td width="12.50%" title = "AVAILABLE"> <center>{{orderedItem.price*orderedItem.qty}}</center> </td>
+    <td width="12.50%" title = "AVAILABLE"> <center>{{orderedItem.price*orderedItem.qty | currency:""}} ₹</center> </td>
     <td width="12.50%" title = "AVAILABLE"> <center><button class="btn waves-effect waves-light" style="background-color: #d32f2f; position: relative; bottom: 2px" ng-click="delThisItem($index)"><i class="fa fa-trash-o"></i></button></center> </td>
   	</tr>
   </tbody>
 </table>
+		<button ng-class="{'bs1': orderedList.length == 0 , 'bs2' : orderedList.length > 0}" class="waves-effect waves-light btn-large" id="backBtn" ng-model="backBtn" ng-click="back(2)" ><font size="4" ><i class="fa fa-chevron-left"></i> BACK</font></button>
 
+		<button style="position: relative; bottom:20px; right:48px; float: right; width:180px; background-color: #757575" class="waves-effect waves-light btn-large" type="submit" id="checkoutBtn" ng-model="checkoutBtn" ng-click="checkout()" ng-show="orderedList.length > 0"><font size="4" > CHECKOUT <i class="fa fa-opencart"></i> </font></button>
 
-
-
+<br>
 
 <!-- </ul> -->
 <b> ALL ITEMS LIST </b>
@@ -135,14 +159,14 @@
       <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
       <th width ="12.50%"><center><i class="fa fa-stack-overflow" style="font-size: 20px"></i> TOTAL STOCK</center></th>
       <th width ="12.50%"><center><i class="fa fa-check" style="font-size: 15px"></i> AVAILABLE</center></th>
-      <th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> AVAILABLE ON {{formattedDate}}</center></th>
+      <th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> AVAILABLE ON {{formattedReturnDate}}</center></th>
   <!-- </tr> -->
   </thead>
   <tbody>
     <tr ng-repeat="item in itemList | filter : search" ng-click="setItem(item,$index)" id="row2{{$index}}" height="48">
     <td width="20%" id="{{item.barCode}}" title = "CODE"> {{item.barCode}} </td>
     <td width="30%" id="{{item.barCode}}" title = "NAME" style="position:relative; left:10px">  {{item.name}} </td>
-    <td width="12.50%" id="{{item.barCode}}" title = "PRICE"> <center>{{item.price}}</center> </td>
+    <td width="12.50%" id="{{item.barCode}}" title = "PRICE"> <center>{{item.price | currency:""}} ₹</center> </td>
     <td width="12.50%" id="{{item.barCode}}" title = "TOTAL STOCK"> <center>{{item.totalStock}}</center> </td>
     <td width="12.50%" id="{{item.barCode}}" title = "AVAILABLE"> <center>{{item.availableStock}}</center> </td>
     <td width="12.50%" id="{{item.barCode}}" title = "RENTED STOCK"> <center> !!! </center> </td>
@@ -155,9 +179,9 @@
 	<div class="modal-content">
 		<center><h4><i class="fa fa-cubes" id="qtyIcon"></i> ENTER THE QUANTITY FOR <b>{{item.name}}</b> 
   		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
-    		<input type="number" ng-model="qty" id="qtySearch" ng-init="qty=1" min="1" max="{{item.availableStock}}" style="font-size: 20px; width: 50px">
+    		<input type="number" ng-model="qty" ng-keydown="tap(enrollItem())" id="qtySearch" ng-init="qty=1" min="1" max="{{item.availableStock}}" style="font-size: 20px; width: 50px">
   		</div> 
-  		<div id="maxVal" class="animated shake" style="display: inline-block;">(MAX : {{item.availableStock}} )</div>
+  		<div id="maxVal" style="display: inline-block;">(MAX : {{item.availableStock}} )</div>
   		<form style="display: inline-block;">
 		<button class="btn waves-effect waves-light" style="background-color: #388E3C" type="submit" name="sbm" ng-click="enrollItem()"><i class="fa fa-check"></i></button>
 		&nbsp;&nbsp;&nbsp;&nbsp;
@@ -170,7 +194,6 @@
 
 <script type="text/javascript">
 	$(document).ready(function(){
-		$('.modal').modal();
-		$('.datepicker').css('font-size','19px')
+
 	})
 </script>
