VIEW & PAY BILLS COMPLETED

--- a/public/views/billing/new.html
+++ b/public/views/billing/new.html
@@ -15,8 +15,7 @@
 
 <h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">NEW BILL </h2>
 
-  <!-- <div class="card grey lighten-2" ng-show="showBill"> -->
-  <div class="card grey lighten-2">
+  <div class="card grey lighten-2" ng-show="showBill">
     <div class="card-tabs">
       <ul class="tabs tabs-fixed-width">
         <li class="tab"><a ng-class="{'active':content === 1}" ng-click="set(1)"><i class="fa fa-file"></i> VIEW BILL</a></li>
@@ -89,7 +88,7 @@
             <div class="card-action" style="height:50px">
             	<span style="float:right">
 					<button style="position: relative; bottom: 10px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" data-target="cancelConfirm"><font size="4"><i class="fa fa-ban"></i> CANCEL ORDER </font></button>
-					<button style="position: relative; bottom: 10px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" data-target="saveBillConfirm"><font size="4" > SAVE BILL <i class="fa fa-floppy-o"></i></font></button>		
+					<button style="position: relative; bottom: 10px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" data-target="saveBillConfirm"><font size="4" > SAVE BILL <i class="fa fa-floppy-o"></i></font></button>
               	</span>
             </div>
 
