--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -45,15 +45,12 @@
 
   <ul id='billDropDown' class='dropdown-content'>
     <li><a ui-sref="new_bill"><i class="material-icons">note_add</i>New Bill</a></li>
-    <li><a ui-sref="pay_bill"><i class="material-icons">attach_money</i>Pay Bills</a></li>
-    <li><a ui-sref="view_bill"><i class="material-icons">search</i>View Bills</a></li>
+    <li><a ui-sref="view_bill"><i class="fa fa-money" style="position: relative; left:4px; font-size: 20px"></i>Billing Central</a></li>
   </ul>  
 
   <ul id='orderDropDown' class='dropdown-content'>
     <li><a ui-sref="new_order"><i class="material-icons">add_shopping_cart</i>New Order</a></li>
-    <li><a ui-sref="view_order"><i class="material-icons">remove_red_eye</i>View Orders</a></li>
-    <li><a ui-sref="search_order"><i class="material-icons">search</i>Search Orders</a></li>
-    <li><a ui-sref="update_order"><i class="material-icons">update</i>Update Orders</a></li>
+    <li><a ui-sref="view_order"><i class="fa fa-shopping-bag" style="position: relative; left:4px; font-size: 20px"></i>Orders Central</a></li>
   </ul>      
 
 </div>
