--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -30,7 +30,7 @@
 </style>
 <div class="animated">
 <h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">STOCK CENTRAL </h2>
-<h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL ITEMS IN DATABSE : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
+<h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL ITEMS IN DATABASE : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
   <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
     <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-init="" id="search" style="width: 0px">
