--- a/public/views/orders/view.html
+++ b/public/views/orders/view.html
@@ -17,6 +17,7 @@
 		color : red;
 	}
 </style>
+
 <div class="animated">
 	<h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">ORDERS CENTRAL </h2>
 	<br>
@@ -27,29 +28,79 @@
 
 	<table class="table table-hover table-responsive list">
 		<thead>
-			<th width ="20%"><i class="fa fa-code" style="font-size: 12px"></i> NUMBER</th>
-			<th width ="30%"><i class="fa fa-user-o" style="font-size: 15px"></i> NAME</th>
-			<th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> DATE</center></th>
-			<th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> AMOUNT</center></th>
-			<th width ="12.50%"><center> STATUS <i class="fa fa-question" style="font-size: 15px"></i></center></th>
-			<th width ="12.50%"><center><i class="fa fa-chevron-down" style="font-size: 15px"></i> PAY NOW</center></th>
+			<th width ="15%"><i class="fa fa-code" style="font-size: 12px"></i> NUMBER</th>
+			<th width ="20%"><i class="fa fa-user-o" style="font-size: 15px"></i> CUSTOMER</th>
+			<th width ="13%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> ISSUE DATE</center></th>
+			<th width ="13%"><center><i class="fa fa-truck" style="font-size: 15px"></i> PICKUP DATE</center></th>
+			<th width ="13%"><center><i class="fa fa-exchange" style="font-size: 15px"></i> RETURN DATE </center></th>
+			<th width ="13%"><center> STATUS <i class="fa fa-question" style="font-size: 15px"></i></center></th>
+			<th width ="13%"><center> ACTIONS <i class="fa fa-chevron-down" style="font-size: 15px"></i></center></th>
 		</thead>
 		<tbody>
-			<!-- <tr ng-repeat="order in orderList | filter : search" ng-click="set(order)" id="row{{$index}}" ng-class="{'danger': order.status === 'NOT PAID' , 'success' : order.status === 'PAID' , 'warning' : order.status === 'ADVANCE PAYMENT'}" height="48"> -->
-			<tr ng-repeat="order in orderList | filter : search" ng-click="set(order)" id="row{{$index}}" height="48">
-			<td width="20%"> {{order.orderId}} </td>
-			<td width="30%">  &nbsp;&nbsp;&nbsp;&nbsp;{{order.name}} </td>
-			<td width="12.50%"><center>{{order.orderDate | date:"dd MMMM, yyyy"}}</center> </td>
-			<td width="12.50%"><center>{{order.orderAmount | currency:""}} ₹</center> </td>
-			<td width="12.50%"><center>{{order.status}}</center> </td>
-			<td width="12.50%">
+			<tr ng-repeat="order in orderList | filter : search" ng-click="set(order,$index)" id="row{{$index}}" ng-class="{'warning' : order.status=='NOT PICKED UP' , 'success' : order.status=='ORDER RETURNED' , 'danger' : order.status=='PICKED UP' && today > order.returnDate, 'info' : order.status=='PICKED UP' && today < order.returnDate }" height="48">
+			<td width="15%"> {{order.orderId}} </td>
+			<td width="20%">  &nbsp;&nbsp;&nbsp;&nbsp;{{order.name}} </td>
+			<td width="13%"><center>{{order.issueDate | date:"dd MMMM, yyyy"}}</center> </td>
+			<td width="13%"><center>{{order.pickupDate | date:"dd MMMM, yyyy"}}</center> </td>
+			<td width="13%"><center>{{order.returnDate | date:"dd MMMM, yyyy"}}</center> </td>
+			<td width="13%"><center>{{order.status}}</center> </td>
+			<td width="13%">
 			<center>
-				<button class="btn waves-effect waves-light" style="background-color: #43a047; position: relative; bottom: 2px;" data-target="payNow"><i class="fa fa-inr"></i></button> 
-				<button class="btn waves-effect waves-light" style="background-color: teal; position: relative; bottom: 2px" data-target="viewBill"><i class="fa fa-eye"></i></button>
+				<span ng-show="order.status=='NOT PICKED UP'">
+					<button class="btn waves-effect waves-light btn-large" ng-model="proceed" ng-click="action($event,order,$index,1)" style="position: relative; bottom: 2px; width:150px; height: 35px"> PICKUP ORDER </button>
+				</span>
+				<span ng-show="order.status=='PICKED UP'">
+					<button class="btn waves-effect waves-light btn-large" ng-model="proceed" ng-click="action($event,order,$index,2)" style="position: relative; bottom: 2px; width:150px; height: 35px"> RETURN ORDER </button>
+				</span>
+				<span ng-show="order.status=='ORDER RETURNED'">
+					<button class="btn waves-effect waves-light btn-large" ng-model="proceed" style="position: relative; bottom: 2px; width:150px; height: 35px" ng-disabled="true"> RETURNED </button>
+				</span>
 			</center> </td>
 			</tr>
 		</tbody>
 	</table>
-
 </div>
+
+
+
+<div id="orderDetails" class="modal bottom-sheet">
+	<div class="modal-content">
+		<h3>ORDER DETAILS</h3>
+      	<table class="table">
+      		<thead>
+				<th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
+				<th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
+				<th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
+				<th width ="12.50%"><center><i class="fa fa-cubes" style="font-size: 20px"></i> QUANTITY</center></th>
+				<th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> TOTAL</center></th>
+      		</thead>
+      		<tbody>
+				<tr ng-repeat="orderedItem in selectedOrder.items" height="48" id="item{{$index}}">
+					<td width="20%" title = "CODE"> {{orderedItem.barCode}} </td>
+					<td width="30%" title = "NAME" style="position:relative; left:10px">  {{orderedItem.name}} </td>
+					<td width="12.50%" title = "PRICE"> <center>{{orderedItem.price | currency :""}} ₹</center> </td>
+					<td width="12.50%" title = "TOTAL STOCK"> <center>{{orderedItem.qty}}</center> </td>
+					<td width="12.50%" title = "AVAILABLE"> <center>{{orderedItem.price*orderedItem.qty | currency :""}} ₹</center> </td>
+				</tr>      			
+      		</tbody>
+      	</table>
+	</div>
+</div>
+
+<div id="pickUpConfirm" class="modal bottom-sheet">
+	<div class="modal-content">
+		<center><h4>ARE YOU SURE THAT THIS ORDER IS PICKED UP BY <b>{{selectedOrder.name}}</b> ?</h4></center>
+		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="pickUp()"> YES </button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="no()"> NO </button></center>
+	</div>
+</div>
+
+<div id="returnConfirm" class="modal bottom-sheet">
+	<div class="modal-content">
+		<center><h4>ARE YOU SURE THAT THE ORDERED ITEMS ARE RETURNED BY <b>{{selectedOrder.name}}</b> ?</h4></center>
+		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="return()"> YES </button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="no()"> NO </button></center>
+	</div>
 </div>
