--- a/public/views/billing/view.html
+++ b/public/views/billing/view.html
@@ -17,9 +17,8 @@
 		color : red;
 	}
 </style>
-<div class="animated">
+<div class="animated" ng-click="t=false">
 	<h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">BILLING CENTRAL </h2>
-	<!-- <h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL UNSETTLED BILLS : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> -->
 	<br>
 	<div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
 		<i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
@@ -54,7 +53,7 @@
 
 <div id="payNow" class="modal modal-fixed-footer">
 	<div class="modal-content">
-		<h3>Pay Now</h3>
+		<h3 ng-show = !t>Pay Now</h3> <h3 ng-show = t>One Time Settlement</h3>
 		  <span class="switch" ng-show="bill.status != 'PAID'" style="position: absolute;float: right; right: 10px; top: 25px;">
 		    <label style="font-size: 15px">
 		      <span ng-class="{'redTextOnly' : !t}"> Pay This Bill Only </span>
@@ -100,6 +99,6 @@
 	</div>
 		<div class="modal-footer">
 			<button style="position: relative; bottom: 5px; height:43px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" ng-click="no()"><font size="4"><span style="position: relative; bottom: 5px;"><i class="fa fa-ban"></i> CANCEL </span></font></button>
-			<button style="position: relative; bottom: 5px; height:43px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="payNowBtn" ng-click="payNow()" ng-disabled="!check()"><font size="4" ><span style="position: relative; bottom: 5px;"> PAY NOW <i class="fa fa-inr"></i></span></font></button>	
+			<button style="position: relative; bottom: 5px; height:43px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="payNowBtn" ng-click="payNow()" ng-disabled="!check() || t"><font size="4" ><span style="position: relative; bottom: 5px;"> PAY NOW <i class="fa fa-inr"></i></span></font></button>	
 		</div>
 </div>
