--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,9 +1,16 @@
+<style type="text/css">
+  #tt{
+    font-family: 'Dancing Script', sans-serif ;
+    font-size: 38px ;
+  }
+</style>
+
 <div class="row">
 <div class="navbar-fixed">
 
 <nav>
   <div class="nav-wrapper" id="header">
-    <a href="#"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a>
+    <a href="#"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt" style="position: relative; left:180px;">DECORATIONS</span>
     <ul class="right hide-on-med-and-down">   
       <li id="logoutBtn"><a ui-sref="logout"><i class="material-icons">input</i></a></li>
     </ul>
